# otus-hw-2

./: CMakeLists.txt  IpData.cpp  IpData.h  main.cpp
.github/workflows/: release.yaml
Tests/: CMakeLists.txt  tests.cc
